--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "83b64e4f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "9f29d1a8",
    "metadata": {},
    "outputs": [
@@ -53,65 +53,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ShagerOnlineStore</td>\n",
-       "      <td>2025-06-21 14:15:20+00:00</td>\n",
-       "      <td>ኳሊቲ የሆነ የጁስ መፍጫ የጀርመን ቴክኖሎጂ የሆነ ሌትር ጁስ የሚፈጭ ጆግ...</td>\n",
-       "      <td>1462</td>\n",
-       "      <td>7403</td>\n",
+       "      <td>@ethio_brand_collection</td>\n",
+       "      <td>2025-06-16 09:01:34+00:00</td>\n",
+       "      <td>አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...</td>\n",
+       "      <td>9414</td>\n",
+       "      <td>6116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ShagerOnlineStore</td>\n",
-       "      <td>2025-06-21 14:12:57+00:00</td>\n",
-       "      <td>ኳሊቲ የሆነ የጁስ መፍጫ የጀርመን ቴክኖሎጂ የሆነ ሌትር ጁስ የሚፈጭ ጆግ...</td>\n",
-       "      <td>1427</td>\n",
-       "      <td>7402</td>\n",
+       "      <td>@ethio_brand_collection</td>\n",
+       "      <td>2025-06-15 09:20:06+00:00</td>\n",
+       "      <td>እሁድ ሁሌም ክፍት ነን አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪ...</td>\n",
+       "      <td>11312</td>\n",
+       "      <td>6115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ShagerOnlineStore</td>\n",
-       "      <td>2025-06-21 07:02:35+00:00</td>\n",
-       "      <td>ባለ ለማንኛውም ዓይነት የውሃ ጀሪካን የሚሆን ቱቦው የሚረዝም ቻርጅ የመያ...</td>\n",
-       "      <td>2234</td>\n",
-       "      <td>7401</td>\n",
+       "      <td>@ethio_brand_collection</td>\n",
+       "      <td>2025-06-14 09:04:17+00:00</td>\n",
+       "      <td>አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...</td>\n",
+       "      <td>12305</td>\n",
+       "      <td>6113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ShagerOnlineStore</td>\n",
-       "      <td>2025-06-21 07:01:25+00:00</td>\n",
-       "      <td>ባለ ለማንኛውም ዓይነት የውሃ ጀሪካን የሚሆን ቱቦው የሚረዝም ቻርጅ የመያ...</td>\n",
-       "      <td>2032</td>\n",
-       "      <td>7400</td>\n",
+       "      <td>@ethio_brand_collection</td>\n",
+       "      <td>2025-06-14 06:40:06+00:00</td>\n",
+       "      <td>አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...</td>\n",
+       "      <td>11831</td>\n",
+       "      <td>6112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ShagerOnlineStore</td>\n",
-       "      <td>2025-06-20 15:25:41+00:00</td>\n",
-       "      <td>ሶስት በአንድ የያዘ የፀጉር ማሽን እና ሼቨር የሚሰራ ጥራት ባለው ግብአት...</td>\n",
-       "      <td>2837</td>\n",
-       "      <td>7399</td>\n",
+       "      <td>@ethio_brand_collection</td>\n",
+       "      <td>2025-06-13 09:02:24+00:00</td>\n",
+       "      <td>አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...</td>\n",
+       "      <td>12482</td>\n",
+       "      <td>6111</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             channel                       date  \\\n",
-       "0  ShagerOnlineStore  2025-06-21 14:15:20+00:00   \n",
-       "1  ShagerOnlineStore  2025-06-21 14:12:57+00:00   \n",
-       "2  ShagerOnlineStore  2025-06-21 07:02:35+00:00   \n",
-       "3  ShagerOnlineStore  2025-06-21 07:01:25+00:00   \n",
-       "4  ShagerOnlineStore  2025-06-20 15:25:41+00:00   \n",
+       "                   channel                       date  \\\n",
+       "0  @ethio_brand_collection  2025-06-16 09:01:34+00:00   \n",
+       "1  @ethio_brand_collection  2025-06-15 09:20:06+00:00   \n",
+       "2  @ethio_brand_collection  2025-06-14 09:04:17+00:00   \n",
+       "3  @ethio_brand_collection  2025-06-14 06:40:06+00:00   \n",
+       "4  @ethio_brand_collection  2025-06-13 09:02:24+00:00   \n",
        "\n",
        "                                     cleaned_message  views    id  \n",
-       "0  ኳሊቲ የሆነ የጁስ መፍጫ የጀርመን ቴክኖሎጂ የሆነ ሌትር ጁስ የሚፈጭ ጆግ...   1462  7403  \n",
-       "1  ኳሊቲ የሆነ የጁስ መፍጫ የጀርመን ቴክኖሎጂ የሆነ ሌትር ጁስ የሚፈጭ ጆግ...   1427  7402  \n",
-       "2  ባለ ለማንኛውም ዓይነት የውሃ ጀሪካን የሚሆን ቱቦው የሚረዝም ቻርጅ የመያ...   2234  7401  \n",
-       "3  ባለ ለማንኛውም ዓይነት የውሃ ጀሪካን የሚሆን ቱቦው የሚረዝም ቻርጅ የመያ...   2032  7400  \n",
-       "4  ሶስት በአንድ የያዘ የፀጉር ማሽን እና ሼቨር የሚሰራ ጥራት ባለው ግብአት...   2837  7399  "
+       "0  አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...   9414  6116  \n",
+       "1  እሁድ ሁሌም ክፍት ነን አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪ...  11312  6115  \n",
+       "2  አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...  12305  6113  \n",
+       "3  አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...  11831  6112  \n",
+       "4  አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...  12482  6111  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
     "import pandas as pd\n",
     "from scr.preprocessing.preprocess_text import preprocess_dataframe\n",
     "\n",
-    "df = preprocess_dataframe(\"../data/raw/ShagerOnlineStore.csv\")\n",
+    "df = preprocess_dataframe(\"../data/raw/@ethio_brand_collection.csv\")\n",
     "df.head()"
    ]
   },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "6c3d95a3",
    "metadata": {},
    "outputs": [
@@ -148,6 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "✅ Saved: ../data/processed\\@ethio_brand_collection_clean.csv\n",
       "✅ Saved: ../data/processed\\Leyueqa_clean.csv\n",
       "✅ Saved: ../data/processed\\marakibrand_clean.csv\n",
       "✅ Saved: ../data/processed\\MerttEka_clean.csv\n",
