Update: Preprocessing and annotating the scrap text

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "83b64e4f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "9f29d1a8",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "4  አድራሻሜክሲኮ ኮሜርስ ጀርባ መዚድ ፕላዛ የመጀመሪያ ደረጃ እንደወጡ የቢሮ...  12482  6111  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "be099484",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "6c3d95a3",
    "metadata": {},
    "outputs": [
@@ -152,8 +152,7 @@
       "✅ Saved: ../data/processed\\Leyueqa_clean.csv\n",
       "✅ Saved: ../data/processed\\marakibrand_clean.csv\n",
       "✅ Saved: ../data/processed\\MerttEka_clean.csv\n",
-      "✅ Saved: ../data/processed\\qnashcom_clean.csv\n",
-      "✅ Saved: ../data/processed\\ShagerOnlineStore_clean.csv\n"
+      "✅ Saved: ../data/processed\\qnashcom_clean.csv\n"
      ]
     }
    ],
